cmake_minimum_required(VERSION 3.7...3.26)

if(${CMAKE_VERSION} VERSION_LESS 3.12)
    cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
endif()

set(CTOOLS_LIB "ctools")

project(${CTOOLS_LIB}
    VERSION 0.0.3
    DESCRIPTION "My personal C toolkit"
    LANGUAGES CXX C)


set(CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/pdb)


include(GNUInstallDirs)


add_subdirectory(src)


option(BUILD_TESTS "Build tests" ON)
if (BUILD_TESTS)
    enable_testing()
    add_subdirectory(test)
endif()



### CPACK ###

set(CPACK_PACKAGE_NAME ${CTOOLS_LIB})
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${PROJECT_DESCRIPTION})
set(CPACK_GENERATOR "DEB")

set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Sleiphan Dawn")
set(CPACK_DEBIAN_PACKAGE_SECTION "libdevel")

set(CPACK_DEB_COMPONENT_INSTALL ON)
set(CPACK_COMPONENTS_ALL runtime dev)

set(CPACK_DEBIAN_RUNTIME_PACKAGE_NAME "lib${CTOOLS_LIB}${PROJECT_VERSION_MAJOR}")
set(CPACK_DEBIAN_DEV_PACKAGE_NAME "lib${CTOOLS_LIB}-dev")

include(CPack)